2010-10-12  Sam Steingold  <sds@gnu.org>

	* gmalloc.c: move from src/malloc/ to src/
	* malloc/getpagesize.c: remove obsolete file
	* makemake.in: update

2010-10-11  Sam Steingold  <sds@gnu.org>

	* makemake.in: make charstrg.o depend on $(GLLIB_A) instead of
	gllib because the latter is _always_ rebuilt

2010-10-08  Sam Steingold  <sds@gnu.org>

	* genclisph.d (check_typecodes): run in the generated
	clisp-test-lispbibl instead of genclisph so that the check is
	always enabled

2010-10-05  Sam Steingold  <sds@gnu.org>

	* makemake.in (full): print gnulib replacements only when -verbose
	and do not fail the build when none is found

2010-10-04  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:STRING-TIME): when calling strptime,
	init tm fields to reasonable values because strptime does not set
	fields which are not specified by datum

2010-10-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (default_thread_name): returns name for functionp object
	(MAKE-THREAD): use it

2010-10-04  Sam Steingold  <sds@gnu.org>

	* makemake.in (full): show which system supplied functionality is
	replaced by gnulib

2010-10-03  Vladimir Tzankov  <vtzankov@gmail.com>

	fix bug#3077583: show-stack segfaults with MT
	* lispbibl.d (THREAD_LISP_STACK_START): remove
	* spvw.d (delete_thread): calculate thread stack address and free it
	* debug.d (show_stack): do not use cmpSTACKop for testing end of stack.
	FRAME == STACK_start should be correct end condition in all cases
	* zthread.d (thread_stub): no back trace for new thread

2010-10-02  Sam Steingold  <sds@gnu.org>

	* makemake.in: make charstrg.o depend on gllib

2010-09-29  Sam Steingold  <sds@gnu.org>

	do not use gnulib module getdate which should have been called get_date
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23310>
	* modules/syscalls/calls.c (xalloc_die): remove
	(GETDATE): condition on HAVE_GETDATE & HAVE_DECL_GETDATE_ERR
	* modules/syscalls/configure.in: do not call AC_PROG_YACC;