@@ -1,5 +1,10 @@
 2010-10-12  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (module_configure_flags): fix according to
+	<http://article.gmane.org/gmane.comp.sysutils.autoconf.general/13381>
+
+2010-10-12  Sam Steingold  <sds@gnu.org>
+
 	* gmalloc.c: move from src/malloc/ to src/
 	* malloc/getpagesize.c: remove obsolete file
 	* makemake.in: update
